--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=3000
 USERNAME=jonas
-PASSWORD=123456
+DATABASE=mongodb+srv://natours-test:<PASSWORD>@cluster0.prhw4.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=GRSYtFmpx2Aty7pN
