--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.10"
+    "nodemon": "^2.0.10",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
