--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.10",
     "slugify": "^1.5.3",
     "validator": "^13.6.0"
