--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.10",
+    "sharp": "^0.28.3",
     "slugify": "^1.5.3",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
