--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.10",
+    "pug": "^3.0.2",
     "sharp": "^0.28.3",
     "slugify": "^1.5.3",
     "validator": "^13.6.0",
