--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
@@ -32,6 +33,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.28.3",
     "slugify": "^1.5.3",
+    "stripe": "^7.0.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
