--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "node": ">=14.16.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "cross-env NODE_ENV=production  nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production  nodemon server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -31,6 +35,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.10",
+    "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
     "sharp": "^0.28.3",
     "slugify": "^1.5.3",
